Finally exposing userIds to frontend
