# service/api/dto/responses.go
@@ -6,11 +6,6 @@ type User struct {
 	Photo    *Photo `json:"photo,omitempty"`
 }
 
-type PublicUser struct {
-	Username string `json:"username"`
-	Photo    *Photo `json:"photo,omitempty"`
-}
-
 type Photo struct {
 	PhotoId string `json:"photoId"`
 	Path    string `json:"path"`
@@ -19,7 +14,7 @@ type Photo struct {
 type ConversationPreview struct {
 	ConversationId int64        `json:"conversationId,omitempty"`
 	Name           string       `json:"name,omitempty"`
-	Participants   []PublicUser `json:"participants"`
+	Participants   []User       `json:"participants"`
 	IsGroup        bool         `json:"isGroup"`
 	Photo          *Photo       `json:"photo,omitempty"`
 	LastMessage    *SentMessage `json:"lastMessage,omitempty"` // optional, can be nil if no messages exist
@@ -28,23 +23,23 @@ type ConversationPreview struct {
 type Chat struct {
 	ConversationId int64         `json:"conversationId"`
 	Name           string        `json:"name,omitempty"`
-	Participants   []PublicUser  `json:"participants"`
+	Participants   []User        `json:"participants"`
 	IsGroup        bool          `json:"isGroup"`
 	Photo          *Photo        `json:"photo,omitempty"`
 	Messages       []SentMessage `json:"messages,omitempty"` // messages in the chat, can be empty if no messages exist
 }
 
 type Reaction struct {
-	SentBy    PublicUser `json:"sentBy"`
-	Content   string     `json:"content"`
-	Timestamp string     `json:"timestamp"`
+	SentBy    User   `json:"sentBy"`
+	Content   string `json:"content"`
+	Timestamp string `json:"timestamp"`
 }
 
 type SentMessage struct {
 	MessageId        int64      `json:"messageId"`
 	Text             *string    `json:"text"`
 	ConversationId   int64      `json:"conversationId"` // ID of the conversation this message belongs to
-	SentBy           PublicUser `json:"sentBy"`
+	SentBy           User       `json:"sentBy"`
 	Timestamp        string     `json:"timestamp"`
 	Photo            *Photo     `json:"photo,omitempty"`
 	Reactions        []Reaction `json:"reactions,omitempty"` // aggregated reactions from rows sharing the same messageId
